--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -154,7 +154,7 @@ Figure \ref{fig:overtaking_analysis_diag} presents a model of an overtaking mano
 
 \begin{figure*}[h]
     \centering
-    \includegraphics[width=14cm]{\pathToOtherFiles/figures/Overtaking_Manoeuvre_Analysis_global_view_v2.png}
+    \includegraphics[width=\textwidth]{\pathToOtherFiles/figures/Overtaking_Manoeuvre_Analysis_global_view_v2.png}
     \caption{Schematic of model-based analysis of overtaking manoeuvre.}
     \label{fig:overtaking_analysis_diag}
 \end{figure*}
