--- a/document/source/abstract.tex
+++ b/document/source/abstract.tex
@@ -1,10 +1,10 @@
-Safety and mission performance validation of autonomous vehicles is a major challenge. We describe a methodology for constructing and applying assertion checks, operating in simulation or in the real world, through the use of an assertion-based oracle. 
+Safety and mission performance validation of autonomous vehicles (AVs) is a major challenge. In this paper we describe a methodology for constructing and applying assertion checks to validate the behaviour of an AV operating either in simulation or in the real world. We have identified a taxonomy of assertion types and the general format of their specification, and we have developed procedures for translating driving codes of practice to yield formal logical expressions that can be monitored automatically by computer, either by direct translation or by physical modelling.
+
+We have developed examples of assertions derived from the UK Highway Code (UKHC), as an example of a code of practice. 
 %
-An assertion library has been derived from the UK Highway Code (UKHC), as an example of a legal code of practice. 
+%Transformation of UKHC rules into assertions can be achieved either by direct translation or by physical modelling, to yield formal logical expressions that can be monitored automatically.
 %
-Transformation of UKHC rules into assertions can be achieved either by direct translation or by physical modelling, to yield formal logical expressions that can be monitored automatically.
-%
-The approach is illustrated on the example of assertion checking for vehicle overtaking, using a geospatial information system in an SQL database for validation and performance assessment.
+We illustrate the approach with an example of assertion checking for vehicle overtaking, using a geospatial information system in an SQL database for validation and performance assessment.
 %
 We present initial simulation and runtime monitoring 
 %realtime video analysis
