Update to clear some todos
Updated body.tex to clear some todos

--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -354,7 +354,9 @@ Pre- and post-conditions can be of one of two sub-types:
 \subsection{Assertion Selection} \label{assertion_triggers}
 Identifying which assertions are relevant in a given situation is important to manage the performance of assertion checking, which is  %performance of the simulator 
 particularly critical for runtime monitoring, and to ensure the output is meaningful. For example, assertions specifically for highway driving are not applicable in urban or rural road environments. %, and may cause confusion if applied in inappropriate contexts. 
-Similarly, different assertions checking for mutually exclusive conditions will be guaranteed to generate errors unless the inappropriate assertions are filtered out. For example, checking that an AV is braking smoothly will inherently fail in a situation where it is required to accelerate.\todo{Would the breaking not be a trigger, i.e.\ if breaking then smoothly?} If assertions of this kind are not selected correctly, they will generate nuisance failure results. 
+Similarly, different assertions checking for mutually exclusive conditions will be guaranteed to generate errors unless the inappropriate assertions are filtered out. For example, checking that an AV is braking smoothly will inherently fail in a situation where it is required to accelerate. If assertions of this kind are not selected correctly, they will generate nuisance failure results.
+%\todo{Would the breaking not be a trigger, i.e.\ if breaking then smoothly?}
+%CH reply to the todo: possibly, but also possibly not; e.g. if AV is near a traffic light then either scenario (accn/braking) might be applicable at different times. But this is more detail than I'd like to go into here - the example was just figurative, to communicate the general idea.
 
 % KIE: already covered above.
 %Filtering assertions can improve %real-time 
@@ -594,9 +596,7 @@ The analysis identifies several key parameters that characterise the overtaking 
 Taken as an ensemble, the last four parameters in the above list define a \emph{driving profile} for the manoeuvre, which characterises a level of urgency or aggression associated with the manoeuvre. An `aggressive' profile might be taken as one which has a low pull-out clearance, high pull-out angle, low cut-in clearance and high cut-in angle, indicating a `sharp and close' manoeuvre taken by the AV around the VBP. A more `relaxed' driving profile may have larger clearances and lower steering angles. Various profiles of manoeuvre with different characteristic values are assessed in the experimental work discussed later. It should be noted that other UKHC rules place (at least qualitative) restrictions on these parameters to ensure safe driving behaviour (see the fourth bullet-point of Rule 163.% in Section \ref{interp_nat_lang_UKHC_rules}, and also Section \ref{sim_case_study}). 
 
 % GC this is confusing...
-As with the problem of direct translation of the UKHC rules, the approach aimed to develop a model using the concepts of the natural language of the rule rather than by other parameters, for example time-to-collision, which has been found in human factors studies to be the most significant parameter characterising overtaking manoeuvres \cite{lenard2018, Chen2015}. Hence the model developed for the Safe Distance Ahead measurement differs from %
-% to\todo{differs from?} 
-many that have been developed for analysis of overtaking manoeuvres, which aim to capture the decision making of the driver rather than the characteristics of the legal code of behaviour that is essentially an independent observer's perspective on the scenario.
+As with the problem of direct translation of the UKHC rules, the approach aimed to develop a model using the concepts of the natural language of the rule rather than by other parameters, for example time-to-collision, which has been found in human factors studies to be the most significant parameter characterising overtaking manoeuvres \cite{lenard2018, Chen2015}. Hence the model developed for the Safe Distance Ahead measurement differs from many that have been developed for analysis of overtaking manoeuvres, which aim to capture the decision making of the driver rather than the characteristics of the legal code of behaviour that is essentially an independent observer's perspective on the scenario.
 
 \subsection{Geospatial Database for Assertion Checking}
 \todo{elevated heading one up}
@@ -606,7 +606,8 @@ Analysis of the overtaking manoeuvre problem fits neatly into the geospatial dat
 
 For each log file there exists an environment table containing map information, which in this case is based on the OpenDrive\footnote{\url{https://www.asam.net/standards/detail/opendrive/}} and lanelet formats. From the lanelet data we derive a table containing useful entries such as lane width and orientation for the environment. Data captured from the simulation (or runtime monitoring), contains a state vector for the actors in $data\_capture.actor\_state$ which contains position and orientation information. From this captured data table we can calculate dynamic state information, that is information changing over time (e.g.\ velocity, acceleration) or with vehicle speed (e.g.\ braking distance). 
 
-Further insight to the driving situation can be derived when combining actor state information with information about the environment. For example, driving lane orientation ($lanelets.lane\_orientation$) can be used to calculate the vehicle heading angle relative to the driving lane, to infer the cut-in or pull-out angles ($state\_dynamics.pull\_out\_angle$) required for the Safe Distance Ahead calculation. The final $assertions$ table is where the Safe Distance Ahead output can be written and stored as a Boolean pass/fail result.\todo{The SDA is a number, the result of the check is a Bool. Please clarify.}
+Further insight to the driving situation can be derived when combining actor state information with information about the environment. For example, driving lane orientation ($lanelets.lane\_orientation$) can be used to calculate the vehicle heading angle relative to the driving lane, to infer the cut-in or pull-out angles ($state\_dynamics.pull\_out\_angle$) required for the Safe Distance Ahead calculation. The final $assertions$ table is where the results of the assertion can be written and stored. The assertion compares the observed distance ahead with the required Safe Distance Ahead, and indicates whether a situation is safe as a Boolean pass/fail result where a 'pass' result is generated if the observed DA is less than the SDA calculated from the driving profile being followed by the AV.
+%\todo{The SDA is a number, the result of the check is a Bool. Please clarify.}
 % KIE: There is a jump here from SDA to the assertion that checks the SDA - both are different and we've not yet introduced the _assertion_, but instead we've focused on the formula (as in the Appendix).
 
 
